# kp

./: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: contact.py  gallery.py  health.py
backend/app/core/: config.py  database.py  logging.py
backend/app/models/: __init__.py  gallery.py
backend/app/schemas/: __init__.py  contact.py  gallery.py
backend/app/services/: gallery_service.py  photo_loader.py
caddy/: Caddyfile  Caddyfile.dev
docker/: backend.dev.Dockerfile  backend.prod.Dockerfile  frontend.dev.Dockerfile  frontend.prod.Dockerfile
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/gallery/: Lightbox.tsx  MasonryGallery.tsx
frontend/src/components/home/: CTA.tsx  FeaturedProjects.tsx  Hero.tsx  Philosophy.tsx  Process.tsx
frontend/src/components/layout/: Footer.tsx  Navbar.tsx  PageTransition.tsx
frontend/src/components/shared/: Marquee.tsx  ParallaxImage.tsx  Reveal.tsx  SectionLabel.tsx  (+2 more)
frontend/src/hooks/: useGallery.ts  useInfiniteSentinel.ts  useMediaQuery.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: About.tsx  Careers.tsx  Contacts.tsx  Galleries.tsx  Home.tsx  Kitchens.tsx
frontend/src/types/: api.ts
(+2 files in other folders)
