[project]
name = "kitchen-portfolio-backend"
version = "0.1.0"
description = "FastAPI backend for the SCI Seattle Cabinets & Interiors portfolio."
requires-python = ">=3.12"
readme = "README.md"
authors = [{ name = "SCI Seattle Cabinets & Interiors" }]

dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "sqlalchemy==2.0.36",
    "psycopg[binary]==3.2.3",
    "alembic==1.14.0",
    "python-multipart==0.0.20",
    "email-validator==2.2.0",
    "httpx==0.28.1",
    "pillow==11.0.0",
    "python-json-logger==2.0.7",
]

[project.optional-dependencies]
dev = [
    "ruff==0.8.4",
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.setuptools.packages.find]
include = ["app*"]
